--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
         "test": "jest"
     },
     "dependencies": {
+        "autoprefixer": "^9.8.8",
         "axios": "^0.21.4",
         "core-js": "^3.6.5",
         "date-fns": "^2.30.0",
         "json-fake-server": "^0.0.2",
+        "postcss": "^7.0.39",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
         "vue": "^3.0.0",
         "vue-router": "^4.0.15"
     },
